loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:5: error: not found: value posBiscuit
posBiscuit() 
^